<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/widget30"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/j">

    <TextView
        android:id="@+id/textView92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_16_text_contact"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textSize="30dp"
        android:layout_marginLeft="135dp"/>

    <TextView
        android:id="@+id/textView91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_16_text_contactline"
        android:layout_below="@id/textView92"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_16_text_location"
        android:layout_below="@id/textView91"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/phoneno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_16_text_phoneno"
        android:layout_below="@id/location"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:textColor="#fff"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_16_text_email"
        android:textStyle="bold"
        android:layout_below="@id/phoneno"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textColor="#fff"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/facebook1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_16_text_facebook1"
        android:textStyle="bold"
        android:layout_below="@id/email"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:textColor="#fff"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/facebook2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_16_text_facebook2"
        android:textStyle="bold"
        android:layout_below="@id/email"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="265dp"
        android:textColor="#fff"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/footertext1"
        android:layout_below="@id/facebook2"
        android:layout_marginBottom="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="12dp"
        android:textColor="#fff"
        android:text="@string/text_copyright" />


</RelativeLayout>