<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/logbackground"
    android:paddingLeft="20dp"
    android:paddingRight="24dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="15dp"
        android:layout_width="60dp"
        android:layout_height="82dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/home"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="#ffff"
        android:layout_marginLeft="90dp"
        android:text="@string/activity_8_text_adminlogin" />

    <EditText
        android:id="@+id/admin_email"
        android:layout_below="@id/logo"
        android:layout_marginTop="24dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/text_enteremail"/>


    <EditText
        android:id="@+id/admin_password"
        android:layout_below="@id/admin_email"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_enterpassword"/>

    <Button
        android:id="@+id/admin_sign_in"
        android:layout_below="@id/admin_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="24dp"
        android:text="@string/button_signin" />

    <TextView
        android:id="@+id/footertext"
        android:layout_below="@id/admin_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:textSize="12dp"
        android:textColor="#ffff"
        android:text="@string/text_copyright" />
</RelativeLayout>